--- a/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
+++ b/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Time Table</mat-card-title>
+    <mat-card-title>Attendance</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div style="margin:5px">
