--- a/src/app/modules/schooltimetable/classperiod/classperiod.component.html
+++ b/src/app/modules/schooltimetable/classperiod/classperiod.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Class Periods</strong></div>
+        <div><strong>Class Period</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
@@ -95,12 +95,12 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading" matTooltip="save all" mat-mini-fab (click)="SaveAll()">
+                        <button [disabled]="loading || Permission=='read'" matTooltip="save all" mat-mini-fab (click)="SaveAll()">
                             <mat-icon>all_out</mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab
+                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
                             (click)="SaveRow(element)">
                             <mat-icon>save</mat-icon>
                         </button>
