--- a/src/app/modules/studentexam/examdashboard/examdashboard.component.html
+++ b/src/app/modules/studentexam/examdashboard/examdashboard.component.html
@@ -3,8 +3,17 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div style="margin:5px">
-            <!-- <div fxLayout="row" fxLayoutAlign="space-around center"> -->
-            <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
+            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+                <mat-tab *ngFor="let component of components;let indx=index">
+                    <ng-template mat-tab-label>
+                        <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
+                    </ng-template>
+                    <ng-template matTabContent>
+                        <div #container></div>
+                    </ng-template>
+                </mat-tab>
+            </mat-tab-group>
+            <!-- <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
                 <mat-tab>
                     <ng-template mat-tab-label>
                         <mat-icon>info</mat-icon>Exams
@@ -35,7 +44,7 @@
                     </ng-template>
                     <app-studentactivity></app-studentactivity>
                 </mat-tab>
-            </mat-tab-group>
+            </mat-tab-group> -->
         </div>
     </mat-card-content>
 </mat-card>
