--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -1,7 +1,15 @@
-
-mat-form-field{
-    margin-right:15px;
+mat-form-field {
+    margin-right: 15px;
 }
-button{
-    margin-right:15px;
+
+button {
+    margin-right: 15px;
+}
+
+mat-cell:first-of-type {
+    padding-left: 0px;
+}
+
+.mat-column-Active {
+    justify-content: center;
 }
