--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -71,7 +71,7 @@
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" 
+                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" 
                         mat-mini-fab (click)="Save(element)">
                             <mat-icon>save</mat-icon>
                         </button>
