--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
@@ -1,7 +1,12 @@
-
-mat-form-field,button{
-    margin-right:15px;
+mat-form-field,
+button {
+    margin-right: 15px;
 }
-button{
-    margin-right:15px;
+
+button {
+    margin-right: 15px;
+}
+
+mat-cell:first-of-type {
+    padding-left: 0px;
 }
