--- a/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
+++ b/src/app/modules/generalreport/generalreportboard/generalreportboard.component.html
@@ -1,26 +1,16 @@
 <mat-card>
-    <mat-card-title></mat-card-title>
+    <mat-card-title>Data</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:5px;max-height: inherit;">
-        <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
-        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)" mat-stretch-tabs>
-
-            <mat-tab>
+        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+            <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
-                    <mat-icon>change_history
-                    </mat-icon> Configured Reports
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
                 </ng-template>
-                <app-getreport></app-getreport>
-            </mat-tab>
-            <mat-tab>
-                <ng-template mat-tab-label>
-                    <mat-icon>change_history
-                    </mat-icon> Excel Upload
+                <ng-template matTabContent>
+                    <div #container></div>
                 </ng-template>
-                <app-excel-data-management></app-excel-data-management>
             </mat-tab>
-            
         </mat-tab-group>
-
     </mat-card-content>
 </mat-card>
